--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -32,6 +32,25 @@
   "follow_section_label": "Follow",
   "follow_topic_description": "Users can follow a specific topic",
   "follow_topic_label": "Follow",
+  "footer_section_contents": "Footer elements",
+  "show_contact_us_section_description": "Show contact-us section in footer",
+  "show_contact_us_section_label": "Contact Us",
+  "contact_us_header_description": "Heading for the contact-us section",
+  "contact_us_header_label": "Header",
+  "mit_address_description": "MIT address",
+  "mit_address_label": "Address",
+  "mit_phone_number_description": "MIT phone number",
+  "mit_phone_number_label": "Phone number",
+  "mit_home_description": "MIT homepage page URL",
+  "mit_home_label": "Homepage",
+  "mit_tos_description": "MIT term-of-service page URL",
+  "mit_tos_label": "TOS",
+  "mit_privacy_policy_description": "MIT privacy policy page URL",
+  "mit_privacy_policy_label": "Privacy Policy",
+  "mit_honor_code_description": "MIT honor code page URL",
+  "mit_honor_code_label": "Honor Code",
+  "mit_about_us_description": "MIT about-us page URL",
+  "mit_about_us_label": "About Us",
   "fonts_group_label": "Fonts",
   "heading_font_description": "Font for headings",
   "heading_font_label": "Heading Font",
