style: zenDesk theme updates: round 1

--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -64,6 +64,8 @@
   "instant_search_label": "Instant search",
   "link_color_description": "Text color for link elements",
   "link_color_label": "Link color",
+  "site_theme_base_color_description": "Mit-xPRO site base color",
+  "site_theme_base_color_label": "Site base theme color",
   "logo_description": "Company logo",
   "logo_label": "Logo",
   "post_sharing_description": "Show social media sharing on post",
@@ -82,6 +84,9 @@
   "scoped_knowledge_base_search_description": "Search results are confined to the category the user is in",
   "scoped_knowledge_base_search_label": "Scoped search in Knowledge Base",
   "search_group_label": "Search settings",
+  "header_page_group_label": "Header settings",
+  "user_info_label": "User info",
+  "user_info_description": "Show user info in header",
   "section_page_group_label": "Section page elements",
   "show_brand_name_description": "Display the Help Center name next to the logo",
   "show_brand_name_label": "Show Help Center name",
