--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -87,6 +87,10 @@
   "header_page_group_label": "Header settings",
   "user_info_label": "User info",
   "user_info_description": "Show user info in header",
+  "mit_link_label": "MIT link",
+  "mit_link_description": "Specify the URL for MIT image in header",
+  "xpro_link_label": "xPRO link",
+  "xpro_link_description": "Specify the URL for xPRO text in header",
   "section_page_group_label": "Section page elements",
   "show_brand_name_description": "Display the Help Center name next to the logo",
   "show_brand_name_label": "Show Help Center name",
