--- a/translations/en-us.json
+++ b/translations/en-us.json
@@ -32,6 +32,23 @@
   "follow_section_label": "Follow",
   "follow_topic_description": "Users can follow a specific topic",
   "follow_topic_label": "Follow",
+  "footer_section_contents": "Footer elements",
+  "show_contact_us_section_description": "Show contact-us section in footer",
+  "show_contact_us_section_label": "Contact Us",
+  "contact_us_header_description": "Heading for the contact-us section",
+  "contact_us_header_label": "Header",
+  "mit_address_description": "MIT address",
+  "mit_address_label": "Address",
+  "mit_home_description": "MIT homepage page URL",
+  "mit_home_label": "Homepage",
+  "mit_tos_description": "MIT term-of-service page URL",
+  "mit_tos_label": "TOS",
+  "mit_privacy_policy_description": "MIT privacy policy page URL",
+  "mit_privacy_policy_label": "Privacy Policy",
+  "mit_honor_code_description": "MIT honor code page URL",
+  "mit_honor_code_label": "Honor Code",
+  "mit_about_us_description": "MIT about-us page URL",
+  "mit_about_us_label": "About Us",
   "fonts_group_label": "Fonts",
   "heading_font_description": "Font for headings",
   "heading_font_label": "Heading Font",
@@ -45,6 +62,8 @@
   "instant_search_label": "Instant search",
   "link_color_description": "Text color for link elements",
   "link_color_label": "Link color",
+  "site_theme_base_color_description": "Mit-xPRO site base color",
+  "site_theme_base_color_label": "Site base theme color",
   "logo_description": "Company logo",
   "logo_label": "Logo",
   "post_sharing_description": "Show social media sharing on post",
@@ -63,6 +82,11 @@
   "scoped_knowledge_base_search_description": "Search results are confined to the category the user is in",
   "scoped_knowledge_base_search_label": "Scoped search in Knowledge Base",
   "search_group_label": "Search settings",
+  "header_page_group_label": "Header settings",
+  "user_info_label": "User info",
+  "user_info_description": "Show user info in header",
+  "xpro_link_label": "xPRO link",
+  "xpro_link_description": "Specify the URL for xPRO text in header",
   "section_page_group_label": "Section page elements",
   "show_brand_name_description": "Display the Help Center name next to the logo",
   "show_brand_name_label": "Show Help Center name",
